# dbaml-pipelines

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
amlpipelines/: pipeline.py  train_deploy.py  workspace.py
notebooks/: Untitled.ipynb
source/: argsparser.py
source/deploy/: main.py
source/deploy/entry_script/: tf_es.py  torch_es.py
source/inference/: score.py
source/preprocess/: main.py
source/train/log/: log_torch.py
source/utils/: helper.py
