[tool.poetry]
name = "dbaml-pipelines"
version = "0.1.0"
description = "Template for ML projects using MLflow and Azure ML pipelines"
authors = ["jralfonsog <jralfonsog@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
mlflow = "1.14.1"
pyarrow = "1.0.1"
hydra = "*"
python-dotenv = "*"

databricks-cli = { version = "0.14.2", optional = true }
databricks-connect = { version = "7.3.10", optional = true }
azureml-sdk = { version = "1.24.0", optional = true }
ipykernel = { version = "*", optional = true }

[tool.poetry.extras]
databricks = ["databricks-cli", "databricks-connect"]
aml = ["azureml-sdk"]
jupyter_kernel = ["ipykernel"]

[tool.poetry.dev-dependencies]
black = "==20.8b1"
pytest = "6.2.2"
pytest-cov = "2.11.1"
pylint = "*"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
